# Gack

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: action.rs  app.rs  commands.rs  config.rs  lib.rs  main.rs  model.rs  watcher.rs
src/git/: diff.rs  explore.rs  mod.rs  process.rs  status.rs
src/tui/: mod.rs  render.rs
tests/: git_backend.rs
